Fix layout breaking when pciker is moved further than client width.

--- a/color-picker.css
+++ b/color-picker.css
@@ -13,6 +13,7 @@
   top:0;
   left:0;
   z-index:9999;
+  width: 172px;
 }
 .color-picker-control {
   border:1px solid #000;
